crates/toml_edit/tests/fixtures/invalid/array/extending-table.stderr
TOML parse error at line 5, column 1
  |
5 | [a.c]
  | ^
Invalid table header
Dotted key `a` attempted to extend non-table type (array)
